fix screen overflow

--- a/client/src/components/ChatPage/ChatPage.module.css
+++ b/client/src/components/ChatPage/ChatPage.module.css
@@ -10,7 +10,7 @@
 .chatlist-section {
     grid-area: chat-list;
     background-color: var(--bg);
-    height: 92vh;
+    height: 90vh;
     overflow: hidden;
 }
 
@@ -18,7 +18,7 @@
     grid-area: chat-messages;
     background-color: white;
     overflow-y: auto;
-    height: 92vh;
+    height: 90vh;
 }
 
 
